--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'South African War, 1899-1902 -- Personal narratives'
 - !lcc 'DT'
+- GITenberg
 title: Zes maanden bij de commando's
 url: http://www.gutenberg.org/ebooks/43034
